--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,11 @@ security.jwt.secret-key=${JWT_SECRET_KEY}
 security.jwt.expiration=${JWT_EXPIRATION}
 security.jwt.refresh-token.expiration=${REFRESH_TOKEN_EXPIRATION}
 security.default-props.role=${DEFAULT_ROLE}
+#Email
+mail.server.host=${MAIL_HOST}
+mail.server.port=${MAIL_PORT}
+mail.server.username=${MAIL_USERNAME}
+mail.server.password=${MAIL_PASSWORD}
+mail.server.protocol=${MAIL_PROTOCOL}
+mail.smtp.auth=${MAIL_SMTP_AUTH}
+mail.smtp.starttls-enabled=${MAIL_SMTP_STARTTLS_ENABLE}
