--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,3 @@
 spring.application.name=smart_invoice_reminder
-#Database
-spring.datasource.url=jdbc:postgresql://${DATASOURCE_URL}
-spring.datasource.username=${DATASOURCE_USERNAME}
-spring.datasource.password=${DATASOURCE_PASSWORD}
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-#Security
-security.jwt.secret-key=${JWT_SECRET_KEY}
-security.jwt.expiration=${JWT_EXPIRATION}
-security.jwt.refresh-token.expiration=${REFRESH_TOKEN_EXPIRATION}
-security.default-props.role=${DEFAULT_ROLE}
-#Email
-mail.server.host=${MAIL_HOST}
-mail.server.port=${MAIL_PORT}
-mail.server.username=${MAIL_USERNAME}
-mail.server.password=${MAIL_PASSWORD}
-mail.server.protocol=${MAIL_PROTOCOL}
-mail.smtp.auth=${MAIL_SMTP_AUTH}
-mail.smtp.starttls-enabled=${MAIL_SMTP_STARTTLS_ENABLE}
+spring.profiles.active=${PROFILE}
+
