--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ name: Java CI with Maven
 on:
   push:
     branches:
-      - feature/*
+      - "feature/*"
   pull_request:
     branches:
       - develop
