first job - users

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,6 @@
 spring:
-  application:
-    name: internal_system_for_club
-server:
-  port: 9005
+  profiles:
+    active: dev
+  security:
+    jwt:
+      secret-key: ${SECRET_KEY}
